Closes #295